@@ -1,53 +1,33 @@
-import { Hoverable } from '@lib/ui/base/Hoverable'
-import { ComponentWithValueProps } from '@lib/ui/props'
-import { Tooltip } from '@lib/ui/tooltips/Tooltip'
 import styled from 'styled-components'
 import { TaskItemFrame } from '../TaskItemFrame'
 import { TaskCompletionInput } from '../TaskCompletionInput'
 import { TaskTextContainer } from '../TaskTextContainer'
 import { TaskProject } from '../TaskProject'
-import { Text } from '@lib/ui/text'
-import { Task } from '@increaser/entities/Task'
-
-const Container = styled(Hoverable)`
-  opacity: 0.6;
-  width: 100%;
-`
+import { useCurrentForecastedTask } from './state/currentForecastedTask'
+import { ForceRecurringTaskCreation } from './ForceRecurringTaskCreation'
+import { HStack } from '@lib/ui/css/stack'
 
 const Content = styled(TaskItemFrame)`
   pointer-events: none;
 `
 
-type Props = ComponentWithValueProps<
-  Pick<Task, 'name' | 'description' | 'projectId' | 'links' | 'checklist'>
-> & {
-  count?: number
-}
+export const ForecastedRecurringTask = () => {
+  const value = useCurrentForecastedTask()
 
-const Count = styled(Text)`
-  font-weight: 800;
-`
-
-export const ForecastedRecurringTask = ({ value, count }: Props) => {
   return (
-    <Tooltip
-      content="This task will be created automatically"
-      renderOpener={(props) => (
-        <div {...props}>
-          <Container verticalOffset={0}>
-            <Content>
-              <TaskCompletionInput value={false} onChange={() => {}} />
-              <TaskTextContainer>
-                <TaskProject value={value.projectId} />
-                {value.name}
-                {count !== undefined && count > 1 && (
-                  <Count as="span"> × {count}</Count>
-                )}
-              </TaskTextContainer>
-            </Content>
-          </Container>
-        </div>
-      )}
-    />
+    <HStack fullWidth justifyContent="space-between" gap={20}>
+      <Content>
+        <TaskCompletionInput
+          style={{ opacity: 0.4 }}
+          value={false}
+          onChange={() => {}}
+        />
+        <TaskTextContainer color="supporting">
+          <TaskProject value={value.projectId} />
+          {value.name}
+        </TaskTextContainer>
+      </Content>
+      <ForceRecurringTaskCreation />
+    </HStack>
   )
 }
