@@ -111,11 +111,11 @@ The "Habits" page has two top-level sections: "My habits" and "Habit ideas." "My
 
 ## Tasks
 
-The "Tasks" page has four subpages: "Tasks", "Upcoming", "Automation", and "Templates".
+The "Tasks" page has four subpages: "Tasks", "Upcoming", "Automation", and "Templates". Users can filter tasks by project.
 
-The "Tasks" subpage is a kanban board with four columns: backlog, todo, inProgress, and done. Users can filter tasks by project.
+The "Tasks" subpage is a kanban board with four columns: backlog, todo, inProgress, and done. Users can drag and drop tasks between columns.
 
-In the "Upcoming" subpage, tasks are grouped grouped by either a day or week(the user can select between days and weeks views). The user can drag and drop tasks between days or weeks.
+In the "Upcoming" subpage, tasks are grouped by either day or week (the user can select between day and week views). The user can drag and drop tasks between days or weeks. This view also includes "forecasted" recurring tasks that will be created automatically at the beginning of a period (e.g., that week or day). These tasks can't be edited, but the user can force the early creation of a recurring task by clicking on the "Create now" button. For example, if the user has a weekly task, a task for the next week will be created at the beginning of that week. If the user wants to edit or start working on it earlier, they can click on the "Create now" button.
 
 Completed tasks are automatically deleted at the beginning of the next week. A user can assign a task to a project. A user can add links to the task to easily access all the necessary external resources during a focus session. A user can add a checklist/subtasks to a task and then complete those sub-items during a focus session on that task. A user can write a description for a task. In the "Automation" subpage, users can set up rules for the automatic creation of recurring tasks. The cadence could be daily, every workday, every week, or every month. For weekly and monthly tasks, the user can select a "deadline index," which for a week would be a weekday and for the month the day of the month. For example, if the "deadline index" for a weekly task is 4, the task will be created every Friday. When the user adds a rule in that section, a new entity called "TaskFactory" is created. Editing or deleting a task created by a TaskFactory won't affect the TaskFactory. In the "Templates" subpage, users can create, edit, and delete task templates. A task template contains the same fields as a task, so when the user creates a task or a TaskFactory, if there are templates for a selected project, they will see an option to use a template, and if they select a template, the task form will be pre-filled with the template data. Tasks are created at the start of the period, but to make it clear for the user, we show "forecasted" recurring tasks on the "Upcoming" subpage. Those tasks are not created yet, and the user can only see them without the ability to edit or delete them.
 
